--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "todo app",
     "todo-app",
     "vanilla js",
-    "native js"
+    "native js",
+    "javascript"
   ],
   "author": "NevenLeung",
   "license": "MIT",
@@ -37,7 +38,7 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.5",
+    "webpack-dev-server": "^3.2.0",
     "webpack-merge": "^4.1.3"
   }
 }
